# archetypes

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-docs.yml  python-package.yml  python-publish.yml
archetypes/: __init__.py  _archetypes.py  _biarchetypes.py  _version.py  archetypes.py
archetypes/algorithms/: __init__.py  archetypes.py  biarchetypes.py  furthest_sum.py
archetypes/algorithms/torch/: __init__.py  archetypes.py  biarchetypes.py  narchetypes.py  utils.py
archetypes/datasets/: __init__.py  _make_archetypal_dataset.py  make_archetypal_dataset.py  permutations.py
archetypes/jax/: __init__.py  _aa.py  _aa_3.py  _base.py  _biaa.py  _biaa_3.py  _inits.py
archetypes/numpy/: __init__.py  _aa.py  _aa_3.py  _ada.py  _base.py  _biaa.py  _biaa_3.py  _fair_aa.py  _fair_kernel_aa.py  _inits.py  _kernel_aa.py  _kernel_ada.py  _naa.py  _projection.pyx  _sym_biaa.py
archetypes/processing/: __init__.py  _closest.py  _permute.py  _sort.py
archetypes/sklearn/: __init__.py  _aa.py  _aa_3.py  _aabase.py  _base.py  _biaa.py  _biaa_3.py  _inits.py  _optims.py
archetypes/tests/: test_common.py
archetypes/torch/: _aa.py  _aa_3.py  _base.py  _biaa.py  _biaa_3.py  _inits.py
archetypes/utils/: __init__.py  check_generator.py  utils.py
archetypes/visualization/: __init__.py  bisimplex.py  circular_bar.py  heatmap.py  network.py  simplex.py  stacked_bar.py  utils.py
bench/: aa.py  biaa.py  naa.py
benchmark/: aa.py
doc/source/: conf.py  index.rst
doc/source/_static/css/: custom.css
doc/source/getting_started/: installation.rst
docs/: Initialization Methods.md  conf.py  index.md  references.bib  requirements.txt
docs/_static/css/: custom.css
docs/_templates/: class-pytorch.rst  class.rst
docs/development/: code_of_conduct.md  contributing.md  index.md  releasing.md
docs/getting_started/: Archetypal Analysis Tutorial.md  Biarchetypal Analysis Tutorial.md  aa.ipynb  index.md  installation.md  overview.md  tutorial.md
docs/getting_started/examples/: aa.ipynb  biaa.ipynb  requirements.txt  visualization.ipynb
docs/reference/: algorithms.md  index.rst  initialization-methods.md  optimization-methods.md  optimizers.md
examples/: aa.ipynb  aa.py  biaa.ipynb  biaa.py
tests/: test_common.py  test_datasets.py  test_jax.py  test_numpy.py  test_torch.py
