[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "archetypes/__init__.py"

[project]
name = "archetypes"
dynamic = ["version"]
description = "A scikit-learn compatible Python package for archetypal analysis"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
    {name = "Aleix Alcacer", mail = "aleixalcacer@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "numpy",
    "scikit-learn",
    "scipy<1.12",  # nnls issue, it will be fixed in 1.15
    "matplotlib",
    "jax",
    "optax",
    "custom_inherit"
]

[project.urls]
"Documentation" = "https://archetypes.readthedocs.io"
"Source code" = "https://github.com/aleixalcacer/archetypes"

[tool.hatch.envs.dev]
dependencies = [
    "pre-commit",
    "flake8",
    "pytest",
    "black[jupyter]",
    "isort",
    "pylint",
    "jupyter",
]

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "100"

[tool.black]
line-length = 100
