[build-system]
requires = ["hatchling", "setuptools", "numpy>=2.0", "Cython>=3.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "archetypes/__init__.py"

[project]
name = "archetypes"
dynamic = ["version"]
description = "A scikit-learn compatible Python package for archetypal analysis"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
    {name = "Aleix Alcacer", email = "aleixalcacer@gmail.com"},
    {name = "Zanchenling Wang", email = "wangzancl@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "numpy>=1.25",
    "scikit-learn>=1.6",
    "scipy>=1.8,<1.12",  # nnls issue, it will be fixed in 1.15
    "matplotlib>=3.8",
    "jax",
    "optax",
    "torch",
    "custom_inherit",
]

[project.urls]
"Documentation" = "https://archetypes.readthedocs.io"
"Source code" = "https://github.com/aleixalcacer/archetypes"

[tool.hatch.envs.dev]
dependencies = [
    "pre-commit",
    "flake8",
    "pytest",
    "black[jupyter]",
    "isort",
    "pylint",
    "jupyter",
]

[tool.hatch.build.hooks.cython]
dependencies = ["hatch-cython"]

[tool.hatch.build.hooks.cython.options]
src = "archetypes"
directives = { boundscheck = false, wraparound = false, nonecheck = false, cdivision = true, language_level = 3, binding = true }

[tool.hatch.build.hooks.cython.options.files]
exclude = ["*.py$"]

[tool.hatch.build.targets.wheel]
packages = ["archetypes"]

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "100"

[tool.black]
line-length = 100
