[build-system]
requires = ["scikit-build-core>=0.10", "numpy>=2.0", "Cython>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "archetypes"
version = "0.12.0"
description = "A scikit-learn compatible Python package for archetypal analysis"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
    { name = "Aleix Alcacer", email = "aleixalcacer@gmail.com" },
    { name = "Zanchenling Wang", email = "wangzancl@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.25",
    "scikit-learn>=1.6",
    "scipy>=1.8,<1.12; python_version < '3.11'",
    "scipy>=1.16; python_version >= '3.11'",
    "matplotlib>=3.8",
    "opt_einsum",
    "pykronecker",
    "networkx",
]

[project.urls]
"Documentation" = "https://archetypes.readthedocs.io"
"Source code" = "https://github.com/aleixalcacer/archetypes"

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
    "jupyter",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "numpydoc",
    "myst-nb",
    "jupyter",
    "sphinxcontrib-bibtex",
    "scikit-learn",
    "matplotlib",
    "numpy",
]

[tool.scikit-build]
wheel.packages = ["archetypes"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
